minor fix of body overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,10 @@ body {
   }
 
   @media (max-width: 480px) {
+    body{
+      overflow: auto;
+    }
+
     header h1 {
       font-size: 2em;
     }
